Bring back SearchableComboBoxTest